--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1852,7 +1852,8 @@ input, select, textarea {
 	}
 
 		.image:before {
-			background: url("images/overlay.png");
+			background: url("images/overlay_grey.jpg");
+			opacity:0.2;
 			content: '';
 			height: 100%;
 			left: 0;
